PVW-14: Bug fix - whitespace under footer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 html,
 body {
   overflow-x: hidden;
+  overflow-y: hidden;
   height: 100%;
 }
 
